# MediaWriter

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CRYPTOGRAPHY.md  DEVELOPMENT.md  LICENSE  MAC.md  PRIVACY.md  README.mac  README.md  WINDOWS.md  assets.qrc  deployment.pri  drivemanager.cpp  drivemanager.h  index.html  last-updated.txt  linuxdrivemanager.cpp  linuxdrivemanager.h  mediawriter.pro  opencode.json  qml.qrc  releasemanager.cpp  releasemanager.h  releases.json  utilities.cpp  utilities.h
.opencode/: session.md
app/: CMakeLists.txt  Info.plist  app.pro  assets.qrc  crashhandler.cpp  deployment.pri  downloadmanager.cpp  downloadmanager.h  drivemanager.cpp  drivemanager.h  fakedrivemanager.cpp  fakedrivemanager.h  linuxdrivemanager.cpp  linuxdrivemanager.h  macdrivearbiter.mm  macdrivemanager.cpp  macdrivemanager.h  main.cpp  main.qml  notifications.cpp  options.cpp  options.h  qml.qrc  releasemanager.cpp  releasemanager.h  utilities.cpp  utilities.h  versionchecker.cpp  versionchecker.h  windowsicon.qrc  windrivemanager.cpp  windrivemanager.h
app/assets/: mediawriter.icns  metadata.json  releases.json
app/assets/icon/: mediawriter.icns
app/complex/: BackButton.qml  DelegateImage.qml  DeleteButton.qml  IndicatedImage.qml  InfoMessage.qml  QuitButton.qml  ZoomableImage.qml
app/components/: AdwaitaBusyIndicator.qml  AdwaitaButton.qml  AdwaitaCheckBox.qml  AdwaitaComboBox.qml  AdwaitaNotificationBar.qml  AdwaitaPopup.qml  AdwaitaProgressBar.qml  AdwaitaRadioButton.qml  AdwaitaRectangle.qml  Arrow.qml  BackButton.qml  CheckMark.qml  Cross.qml  DelegateImage.qml  DownloadDialog.qml  FullscreenViewer.qml  ImageDetails.qml  ImageList.qml  IndicatedImage.qml  InfoMessage.qml  LinuxDownloadDialog.qml  LinuxRestoreDialog.qml  MenuButton.qml  PopNotification.qml  PopOver.qml  QuitButton.qml  RestoreDialog.qml  ZoomableImage.qml
app/data/: org.fedoraproject.MediaWriter.appdata.xml  org.fedoraproject.MediaWriter.appdata.xml.in  org.fedoraproject.MediaWriter.desktop
app/data/assets/: metadata.json
app/data/icons/: mediawriter.icns
app/dialogs/: DownloadDialog.qml  RestoreDialog.qml
app/qml/: DeleteButton.qml  DownloadDialog.qml  InfoMessage.qml  RestoreDialog.qml  ZoomableImage.qml  main.qml
app/simple/: AdwaitaButton.qml  AdwaitaCheckBox.qml  AdwaitaComboBox.qml  AdwaitaNotificationBar.qml  AdwaitaPopNotification.qml  AdwaitaPopOver.qml  AdwaitaPopup.qml  AdwaitaRadioButton.qml  AdwaitaRectangle.qml  Arrow.qml  CheckMark.qml  Cross.qml  FocusRectangle.qml
app/views/: FullscreenViewer.qml  ImageDetails.qml  ImageList.qml
helper/linux/: CMakeLists.txt  deployment.pri  drive.cpp  drive.h  linux.pri  linux.pro  main.cpp  restorejob.cpp  restorejob.h  writejob.cpp  writejob.h
helper/win/: CMakeLists.txt  drive.cpp  drive.h  helper.exe.rc  main.cpp  restorejob.cpp  restorejob.h  win.pri  win.pro  writejob.cpp  writejob.h
src/app/: CMakeLists.txt  assets.qrc  crashhandler.cpp  crashhandler.h  downloadmanager.cpp  downloadmanager.h  drivemanager.cpp  drivemanager.h  fakedrivemanager.cpp  fakedrivemanager.h  linuxdrivemanager.cpp  linuxdrivemanager.h  macdrivearbiter.h  macdrivearbiter.mm  macdrivemanager.cpp  macdrivemanager.h  main.cpp  mnemonicfilter.cpp  mnemonicfilter.h  notifications.cpp  notifications.h  portalfiledialog.cpp  portalfiledialog.h  qml.qrc  releasemanager.cpp  releasemanager.h  units.cpp  units.h  utilities.cpp  utilities.h  versionchecker.cpp  versionchecker.h  windrivemanager.cpp  windrivemanager.h
src/app/data/: Info.plist  io.aosc.MediaWriter.appdata.xml  io.aosc.MediaWriter.appdata.xml.in  io.aosc.MediaWriter.desktop  io.aosc.MediaWriter.desktop.in  org.acreetionos.MediaWriter.desktop  org.acreetionos.MediaWriter.desktop.in  org.acreetionos.MediaWriter.metainfo.xml  org.acreetionos.MediaWriter.metainfo.xml.in  org.bazzite.MediaWriter.desktop.in  org.bazzite.MediaWriter.metainfo.xml.in  org.fedoraproject.MediaWriter.appdata.xml  org.fedoraproject.MediaWriter.appdata.xml.in  org.fedoraproject.MediaWriter.desktop  org.fedoraproject.MediaWriter.desktop.in  org.fedoraproject.MediaWriter.metainfo.xml  org.fedoraproject.MediaWriter.metainfo.xml.in  windows.rc
src/app/data/assets/: metadata.json  releases.json
src/app/data/icons/: acreetionos-mediawriter.icns  mediawriter.icns
src/app/qml/: AboutDialog.qml  AboutPage.qml  AboutPopup.qml  AboutWindow.qml  AcreetionOSTheme.qml  AdwaitaPopNotification.qml  CancelDialog.qml  CancelWindow.qml  DelegateImage.qml  DeviceWarningDialog.qml  DownloadDialog.qml  DownloadPage.qml  DrivePage.qml  FullscreenViewer.qml  Heading.qml  ImageDetails.qml  ImageList.qml  MainPage.qml  ModalDialog.qml  Page.qml  RestoreDialog.qml  RestoreNotification.qml  RestorePage.qml  SelectDrivePage.qml  SelectFedoraVersionPage.qml  Units.qml  VersionPage.qml  main.qml
src/app/qml_old/: AdwaitaPopOver.qml  Arrow.qml  DelegateImage.qml  FocusRectangle.qml  ImageDetails.qml  main.qml
src/helper/linux/: CMakeLists.txt  job.cpp  job.h  main.cpp  restorejob.cpp  restorejob.h  ventoyinstalljob.cpp  ventoyinstalljob.h  writejob.cpp  writejob.h
src/helper/mac/: CMakeLists.txt  main.cpp  restorejob.cpp  restorejob.h  writejob.cpp  writejob.h
src/helper/win/: CMakeLists.txt  main.cpp  restorejob.cpp  restorejob.h  win.pro  writejob.cpp  writejob.h
src/theme/: CMakeLists.txt  adwaitathemeplugin.cpp  adwaitathemeplugin.h  icon.cpp  icon.h  theme.cpp  theme.h
src/theme/qml/: Button.qml  CheckBox.qml  CheckIndicator.qml  ComboBox.qml  Label.qml  MenuItem.qml  ProgressBar.qml  RadioButton.qml  RadioIndicator.qml  ScrollBar.qml  TextField.qml  qmldir
src/theme/qml/private/: ButtonFrame.qml
theme/: Button.qml  CMakeLists.txt  Label.qml  adwaitatheme.qrc  adwaitathemeplugin.cpp  adwaitathemeplugin.h  icon.cpp  icon.h  qmldir  theme.cpp  theme.h  theme.pro  units.cpp  units.h
theme/private/: ButtonFrame.qml
theme/qml/: Button.qml  CheckBox.qml  CheckIndicator.qml  ComboBox.qml  Label.qml  ProgressBar.qml  RadioButton.qml  RadioIndicator.qml  ScrollBar.qml  TextField.qml
theme/qml/private/: ButtonFrame.qml
(+416 files in other folders)
